# space-station-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  server_output.txt
.claude/: settings.local.json
assets/maps/: station.map
client/: CMakeLists.txt
client/include/client/: bitmap_font.h  game_client.h  input_handler.h  network_client.h  renderer.h
client/include/client/ui/: ui_button.h  ui_element.h  ui_hotbar.h  ui_manager.h
client/src/: bitmap_font.cpp  game_client.cpp  input_handler.cpp  main.cpp  network_client.cpp  renderer.cpp
client/src/ui/: ui_button.cpp  ui_element.cpp  ui_hotbar.cpp  ui_manager.cpp
include/: Map.h
server/: CMakeLists.txt
server/include/server/: collision.h  enemy_manager.h  game_world.h  network_server.h  ship_manager.h
server/src/: collision.cpp  enemy_manager.cpp  game_world.cpp  main.cpp  network_server.cpp  ship_manager.cpp
shared/: CMakeLists.txt
shared/include/shared/: game_object.h  game_objects.h  map.h  protocol.h  station_generator.h  types.h
shared/src/: game_object.cpp  game_objects.cpp  map.cpp  protocol.cpp  station_generator.cpp
src/: CMakeLists.txt  Map.cpp
src/client/: client.cpp
src/server/: server.cpp
